<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

<com.google.android.material.tabs.TabLayout
    android:id="@+id/tl_dwn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    android:visibility="gone">
    <com.google.android.material.tabs.TabItem
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/dwn_incomlete"/>
    <com.google.android.material.tabs.TabItem
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/dwn_completed"/>
</com.google.android.material.tabs.TabLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ListView
            android:id="@+id/lv_dwn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            ></ListView>
        <LinearLayout
            android:id="@+id/lnlyOperation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:visibility="gone">

        <Button
            android:id="@+id/btnResume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dwn_resume"
            />
        <Button
            android:id="@+id/btnPause"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dwn_pause"
            />
        <Button
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dwn_delete"
            />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lv_defalutoption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/btn_pause_all"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dwn_pauseall"
                />
            <Button
                android:id="@+id/btn_resume_all"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dwn_resumeall"
                />
        </LinearLayout>
    </FrameLayout>



    </LinearLayout>
