<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_save_info"
                android:textStyle="italic"/>
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s_source"
            android:textSize="20dp"
            android:layout_marginTop="5dp"/>
            <Spinner
                android:id="@+id/sp_source"
                android:layout_width="match_parent"
                android:layout_height="40dp"></Spinner>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_download"
                android:textSize="20dp"
                android:layout_marginTop="5dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_dwon_loc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:textStyle="italic" />
                <Button
                    android:id="@+id/btn_down_loc_brw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/s_browse"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:visibility="visible" />
            </LinearLayout>
            <TextView
                android:id="@+id/textView4"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_player"
                android:textSize="20sp"
               />
            <RadioGroup
                android:id="@+id/rg_player"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

                <RadioButton
                    android:id="@+id/rb_sIplayer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/s_Iplayer"
                    />
                <RadioButton
                    android:id="@+id/rb_sEplayer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/s_Eplayer"
                   />
                <RadioButton
                    android:id="@+id/rb_sAplayer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/s_Aplayer"
                   />

            </RadioGroup>
            <TextView
                android:id="@+id/tv_theme"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_theme"
                android:textSize="20sp"
                />
            <RadioGroup
                android:id="@+id/rg_theme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

                <RadioButton
                    android:id="@+id/rb_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/s_light"
                    />
                <RadioButton
                    android:id="@+id/rb_dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/s_dark"
                    />
            </RadioGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/s_parallel_dwn"
                    android:textSize="15dp"/>
                <Spinner
                    android:id="@+id/sp_p_dwn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/s_pdwn_enteries"></Spinner>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_p_dwn_info"
                android:textStyle="italic"
                android:textSize="10dp"/>
            <Button
                android:id="@+id/btn_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="About"
                android:layout_marginBottom="10dp"/>




        </LinearLayout>
    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/ic_save_light_24dp"/>

</FrameLayout>

