<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_details">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView
        android:id="@+id/sv_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <ImageView
            android:id="@+id/iv_img_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
           />
        <ImageView
            android:id="@+id/iv_img_bg_helper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            />
        <ImageView
            android:id="@+id/iv_img"
            android:layout_width="105dp"
            android:layout_height="160dp"
            android:layout_margin="22dp"
            android:scaleType="fitXY"
            android:layout_marginBottom="5dp"
            android:background="@drawable/img_bg"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="21dp"
            android:layout_marginLeft="135dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:maxLines="2"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

    </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:id="@+id/ll_ep"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="visible">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/da_sty"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="10dp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tv_sty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:maxLines="5"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/da_options"
                        android:textStyle="bold"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="vertical"
                        android:background="@drawable/linkbtn_bg">
                        <Switch
                            android:id="@+id/sw_stm_dwn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/da_sw_to_stm" />

                        <ToggleButton
                            android:id="@+id/tbtn_stm_dwn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Stream"
                            android:visibility="gone"/>
                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/da_link"
                        android:layout_margin="5dp"
                        android:textStyle="bold"/>
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/linkbtn_bg"
                        android:layout_margin="5dp">
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_ep"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:nestedScrollingEnabled="false">

                        </androidx.recyclerview.widget.RecyclerView>
                        <ProgressBar
                            android:id="@+id/pg_ep_down"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:visibility="gone"/>
                    </FrameLayout>

                </LinearLayout>
                <ProgressBar
                    android:id="@+id/pg_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"/>

            </FrameLayout>

        </LinearLayout>

      </androidx.core.widget.NestedScrollView>

    </FrameLayout>

</LinearLayout>